<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>alpine</groupId>
    <artifactId>plugin-example</artifactId>
    <version>1.10</version>

    <repositories>
        <repository>
            <id>central</id>
            <name>Maven Repository</name>
            <url>https://repo1.maven.org/maven2</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>
    <properties>
        <alpine.version>1.10</alpine.version>
    </properties>
    <dependencies>

        <!-- Alpine dependency -->

        <dependency>
            <groupId>com.alpinenow</groupId>
            <artifactId>plugin-core</artifactId>
            <version>${alpine.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.alpinenow</groupId>
            <artifactId>common</artifactId>
            <version>${alpine.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.alpinenow</groupId>
            <artifactId>plugin-test</artifactId>
            <version>${alpine.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.alpinenow</groupId>
            <artifactId>plugin-spark</artifactId>
            <version>${alpine.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.alpinenow</groupId>
            <artifactId>plugin-model</artifactId>
            <version>${alpine.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.alpinenow</groupId>
            <artifactId>alpine-model-api</artifactId>
            <version>${alpine.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.alpinenow</groupId>
            <artifactId>alpine-model-pack</artifactId>
            <version>${alpine.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.alpinenow</groupId>
            <artifactId>plugin-io-impl</artifactId>
            <version>${alpine.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <artifactId>junit</artifactId>
            <groupId>junit</groupId>
            <version>4.10</version>
            <scope>test</scope>
        </dependency>


    </dependencies>

    <build>
        <plugins>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>

            <!-- Useful for testing -->
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.19.1</version>
                <configuration>
                    <argLine>-Xmx2048m -XX:MaxPermSize=1024m</argLine>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.scala-tools</groupId>
                <artifactId>maven-scala-plugin</artifactId>
                <version>2.15.2</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>compile</goal>
                            <goal>testCompile</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>2.4.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- Run "mvn compile gplus:execute" to execute this. It generates the plugins.xml file.-->
            <plugin>
                <groupId>org.codehaus.gmavenplus</groupId>
                <artifactId>gmavenplus-plugin</artifactId>
                <version>1.5</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>execute</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <scripts>
                        <script>file:///${project.basedir}/src/main/groovy/signature-metadata-generator.groovy</script>
                    </scripts>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.reflections</groupId>
                        <artifactId>reflections</artifactId>
                        <!-- use latest version of Reflections -->
                        <version>0.9.10</version>
                    </dependency>
                    <dependency>
                        <groupId>org.codehaus.groovy</groupId>
                        <artifactId>groovy-all</artifactId>
                        <!-- any version of Groovy \>= 1.5.0 should work here -->
                        <version>2.1.6</version>
                        <scope>runtime</scope>
                    </dependency>
                    <dependency>
                        <groupId>dom4j</groupId>
                        <artifactId>dom4j</artifactId>
                        <version>1.6.1</version>
                    </dependency>
                </dependencies>
            </plugin>

        </plugins>
    </build>

</project>

